feat: desenvolvimento de uma tela basica para visualizacao
